; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptools.c_snmp_output_octetstring.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/tools/libbsnmptools/extr_bsnmptools.c_snmp_output_octetstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }
%struct.snmp_toolinfo = type { i32 }

@OUTPUT_VERBOSE = common dso_local global i64 0, align 8
@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"%s : \00", align 1
@syntax_strings = common dso_local global %struct.TYPE_2__* null, align 8
@SNMP_SYNTAX_OCTETSTRING = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snmp_toolinfo*, i32, i64, i32*)* @snmp_output_octetstring to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snmp_output_octetstring(%struct.snmp_toolinfo* %0, i32 %1, i64 %2, i32* %3) #0 {
  %5 = alloca %struct.snmp_toolinfo*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  store %struct.snmp_toolinfo* %0, %struct.snmp_toolinfo** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load i64, i64* %7, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i32*, i32** %8, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %4
  br label %42

16:                                               ; preds = %12
  %17 = load %struct.snmp_toolinfo*, %struct.snmp_toolinfo** %5, align 8
  %18 = call i64 @GET_OUTPUT(%struct.snmp_toolinfo* %17)
  %19 = load i64, i64* @OUTPUT_VERBOSE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %16
  %22 = load i32, i32* @stdout, align 4
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** @syntax_strings, align 8
  %24 = load i64, i64* @SNMP_SYNTAX_OCTETSTRING, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @fprintf(i32 %22, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %27)
  br label %29

29:                                               ; preds = %21, %16
  %30 = load i32, i32* %6, align 4
  %31 = load i64, i64* %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = bitcast i32* %32 to i8*
  %34 = call i8* @snmp_oct2tc(i32 %30, i64 %31, i8* %33)
  store i8* %34, i8** %9, align 8
  %35 = icmp ne i8* %34, null
  br i1 %35, label %36, label %42

36:                                               ; preds = %29
  %37 = load i32, i32* @stdout, align 4
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @fprintf(i32 %37, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %38)
  %40 = load i8*, i8** %9, align 8
  %41 = call i32 @free(i8* %40)
  br label %42

42:                                               ; preds = %15, %36, %29
  ret void
}

declare dso_local i64 @GET_OUTPUT(%struct.snmp_toolinfo*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @snmp_oct2tc(i32, i64, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
